@@ -4,6 +4,9 @@ VP 10.4.0 Changelog
 - fix some editor crashes
 - fix UI rendering of alpha images on Windows XP
 
+- in interactive camera/light editing mode (e.g. launch table with F6 or the respective menu entry) navigating around the table with the arrow keys (and left alt key)
+  must now be explicitly enabled in the key preferences dialog
+
 - add Randr's rulers, plus a simple protractor and Rothbauerw's manual ball control script (slightly tweaked) to the default table
 
 - see core scripts (header of core.vbs) for the respective changelog
